--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="row">
 	<div class="twelve columns">
-		<h1 class="site-title">Farkle for Two</h2>
+		<h1 class="site-title">Farkle for Two Players</h2>
 	</div>
 </div>
 <div class="row">
