Refactor farkle.js with new state variable

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</div>
 	<div class="two columns button-container end">
 		<h2>
-			<span class="roll-button"><a href="#" id="roll-button" onclick="rollDice()">Roll Dice</a></span>
+			<span class="roll-button"><a href="#" id="roll-button" onclick="initiateRoll()">Roll Dice</a></span>
 			<span class="bank-button"><a href="#" id="bank-button" onclick="bankScore()">Bank Score</a></span>
 		</h2>
 	</div>
