Function tweaks and UI improvements

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 <div class="row">
 	<div class="nine columns offset-by-two">
-		<p class="message"><span id="current-name">Player One</span> now rolling: <span class="score"><span id="roll-score">0</span> points</span></p>
+		<p class="message">Score this roll <span class="score"><span id="roll-score">0</span> points</span></p>
 			<p id="instructions"><a href="#" onclick="addNames()" id="personalize">Click here to add your <span id="singular-plural">names</span>.</a></p>
 	</div>
 </div>
