Remove single player option

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <header class="row">
 	<div class="twelve columns">
-		<h1 class="site-title">Farkle for One or Two Players</h2>
+		<h1 class="site-title">Farkle for Two Players</h2>
 	</div>
 </header>
 <div class="row">
@@ -75,7 +75,7 @@
 	<div class="two columns button-container add-margin offset-by-one end">
 		<h2>
 			<span class="reset"><a href="#" onclick="reloadPage()" id="reset">New Game</a></span>
-			<span class="one-player"><a href="#" onclick="onePlayer()" id="one-player">One Player</a></span>
+			<!--<span class="one-player"><a href="#" onclick="onePlayer()" id="one-player">One Player</a></span>-->
 		</h2>
 	</div>
 </div>
@@ -95,7 +95,7 @@
 </div>
 <footer class="row">
 	<div class="four columns centered">
-		<p class="promo">&copy;2013 <a href="http://janmilosh.com" target="_blank">Jan Milosh</a></p>
+		<p class="promo">&copy; 2013 <a href="http://janmilosh.com" target="_blank">Jan Milosh</a></p>
 	</div>
 </footer>
 <!-- Included JS Files (Compressed) -->
