--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<h1 id="rules">Instructions for playing Farkle</h1>
 			<p><em>A prompt for the current action is located on the second line below the dice.</em></p>
 			<h2>Starting the game</h2>
-			<p>After the page loads, or the 'New Game' button is clicked, a prompt for adding the players' names appears. Click this prompt and fill in your names as instructed. You may skip this step by clicking the roll button.</p>
+			<p>After the page loads, or the 'New Game' button is clicked, a prompt for adding the players' names appears. Click this prompt and fill in your names as instructed. You may skip this step by clicking the 'Roll Dice'.</p>
 			<h2>Rolling, selecting, and banking</h2>
 			<p>Your round begins with a roll (click 'Roll Dice'). After rolling, click on the dice that you wish to score. If you would like to continue rolling, click 'Roll Dice' again. Your roll totals will be added together for your round score. If you want to record your score for the round, click 'Bank Score' and your total for the round will be added to your total score. The other player then starts their round by clicking the 'Roll Dice' button.</p>
 			<p>If you select a dice by mistake, you may undo your selection by clicking on it again. The current roll score will update as you click on the dice. <em>Clicking 'Bank Score' when the current roll score is zero will cause you to lose all points for the round and pass the turn to the other player. This is called 'Farkling'.</em></p>
