--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 	<!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Farkle Game</title>
-	<!-- Included CSS Files (Uncompressed) -->
-	<!--
-	<link rel="stylesheet" href="stylesheets/foundation.css">
-	-->
+	<!--[if lt IE 9]><script type="text/javascript">alert("We're sorry. This game requires a modern browser. You can download either Google Chrome or Firefox for free.");</script><![endif]-->
 	<!-- Included CSS Files (Compressed) -->
 	<link rel="stylesheet" href="stylesheets/foundation.min.css">
 	<link rel="stylesheet" href="stylesheets/app.css">
