--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="six columns player1">
 			<div class="panel">
 				<h2 class="player1-name">Player One</h2>
-				<p>Last roll: <span id="player1-roll">0</span></p>
+				<p>Roll: <span id="player1-roll">0</span></p>
 				<p>Round: <span id="player1-round">0</span></p>			
 				<p>Total: <span id="player1-total">0</span></p>
 			</div>
@@ -65,7 +65,7 @@
 		<div class="six columns player2">
 			<div class="panel">
 				<h2 class="player2-name">Player Two</h2>
-				<p>Last roll: <span id="player2-roll">0</span></p>
+				<p>Roll: <span id="player2-roll">0</span></p>
 				<p>Round: <span id="player2-round">0</span></p>			
 				<p>Total: <span id="player2-total">0</span></p>
 			</div>
