--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="stylesheets/foundation.min.css">
 	<link rel="stylesheet" href="stylesheets/app.css">
 	<link rel="stylesheet" href="stylesheets/style.css">
+	<link rel="shortcut icon" href="favicon.ico" />
 	<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
