Small fix to instructions

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<li>six of a kind: multiply by 4</li>
 			</ul>
 			<h2>Winning</h2>
-			<p>Play continues until one player exceeds 10,000 points. The other player then gets one more round. The final score is then calculated and a winner declared. If the scores are equal, a tie is declared.</p>
+			<p>Play continues until one player meets or exceeds 10,000 points. The other player then gets one more round. The final score is then calculated and a winner declared. If the scores are equal, a tie is declared.</p>
 			<p><em>For more information about Farkle, please see the <a href="http://en.wikipedia.org/wiki/Farkle" target="_blank">Wikipedia Article</a>.</em></p>
 		</div>
 	</aside>
